--- a/assest/CSS/style.css
+++ b/assest/CSS/style.css
@@ -369,7 +369,56 @@ input{
 }
 
 /* ================ ASSIGNMENT ====================== */
+/* .assignment__container{
+    grid-template-columns: repeat(3, 1fr);
+}
 
+.assignment__item{
+    position: relative;
+    cursor: pointer;
+    border-radius: var(--radius);
+}
+
+.assignment__data{
+    text-align: center;
+    z-index: var(--z-tooltip);
+}
+
+.assignment__img{
+    opacity: 0.75;
+    width: 100%;
+    vertical-align: middle;
+    transition: all 1s var(--transition);
+}
+
+.assignment__subtitle{
+    color: var(--title-color);
+    opacity: 0.7;
+}
+
+.assignment__subtitle{
+    font-size: var(--small-font-size);
+    margin-bottom: 0.25rem;
+}
+
+.assignment__title{
+    font-size: var(--h2-font-size);
+    font-weight: var(--wight-600);
+    margin-bottom: 0.75rem;
+}
+
+.assignment__item:hover .assignment__img{
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+.assignment__item:hover{
+    display: block;
+}
+
+.assignment__item:hover .assignment__data{
+    transform: translateY(2rem);
+} */
 
 /* ================ CONTACT ====================== */
 
