media query forms added

--- a/assest/CSS/style.css
+++ b/assest/CSS/style.css
@@ -20,8 +20,8 @@
     --body-font:'Poppins', sans-serif;
     --second-font: 'Montserrat', sans-serif;
 
-    --big-font-size: 3.5rem;
-    --h1-font-size: 3.75rem;
+    --big-font-size: clamp(2rem, 0.9706rem + 4.7059vw, 4.5rem);
+    --h1-font-size: clamp(1.75rem, 0.9265rem + 3.7647vw, 3.75rem);
     --h2-font-size: 1.75rem;
     --h3-font-size: 1.5rem;
     --normal-font-size: 1.125rem;
@@ -675,8 +675,27 @@ input{
 
 /* =============== BREAKPOINTS ======================= */
 /* For Large Devices */
-
+@media screen and (max-width: 1440px) and (min-width:1024px) {
+    
+}
+@media screen and (max-width: 1024px) and (min-width:768px){
+    
+}
 
 /* For Medium Devices */
+@media screen and (max-width: 876px) and (min-width:425px){
+    
+}
 
 /* For Small Devices */
+@media screen and (max-width: 425px) and (min-width:375px){
+    
+}
+
+@media screen and (max-width: 375px) and (min-width:325px){
+    
+}
+
+@media screen and (max-width: 325px){
+    
+}
