--- a/assest/CSS/style.css
+++ b/assest/CSS/style.css
@@ -166,6 +166,30 @@ input{
     
 }
 
+/* ==========SCROLL BAR================== */
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--first-color); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: transparent;
+    border: 1px solid var(--first-color); 
+  }
+
 /* ================ HEADED AND NAV ====================== */
 .header{
     position: absolute;
@@ -789,30 +813,25 @@ input{
         right: 0;
     }
 
-    .nav__list{
+    .nav__list {
         flex-direction: column;
         row-gap: 1.125rem;
     }
 
-    .nav__close{
+    .nav__close {
         font-size: 1.5rem;
         position: absolute;
         top: 1rem;
         right: 1rem;
-
+        cursor: pointer;
     }
 
-    .nav__socials{
+    .nav__socials {
         column-gap: 1rem;
     }
 
-    .nav__toggle{
+    .nav__toggle {
         font-size: 1.125rem;  
-        
-    }
-
-    .nav__close,
-    .nav__toggle{
         cursor: pointer;
     }
 
@@ -883,12 +902,41 @@ input{
 
     .scrollup__icon{
         font-size: 2rem;
-    }
+    } 
 }
 
 /* For Small Devices */
 @media screen and (max-width: 425px){
+    .nav__menu{
+        width: 80vw;
+        padding: 2rem;
+    }
+
+    .home__img{
+        height: 245px;
+        width: 245px;
+    }
+
+    .about__img{
+        height: 240px;
+        width: 240px;
+    }
     
+    .services__item{
+        padding: 2rem 1.5rem;
+    }
+
+    .assignment__img{
+        height: 150px;
+    }
+
+    .contact__img{
+        height: 300px;
+        width: 300px;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
 }
 
 @media screen and (max-width: 375px){
