--- a/assest/CSS/style.css
+++ b/assest/CSS/style.css
@@ -174,7 +174,7 @@ input{
   
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px rgb(43, 43, 43); 
     border-radius: 10px;
   }
    
@@ -186,8 +186,8 @@ input{
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: transparent;
-    border: 1px solid var(--first-color); 
+    background: var(--border-color);
+    /* border: 1px solid var(--first-color);  */
   }
 
 /* ================ HEADED AND NAV ====================== */
@@ -916,7 +916,7 @@ input{
 /* For Small Devices */
 @media screen and (max-width: 425px){
     .nav__menu{
-        width: 80vw;
+        width: 65vw;
         padding: 2rem;
     }
 
