--- a/assest/CSS/style.css
+++ b/assest/CSS/style.css
@@ -298,7 +298,7 @@ input{
 
 /* ================ HOME ====================== */
 .home{
-    padding-block: 16rem 9rem;
+    padding-block: 13rem 9rem;
 
 }
 
@@ -316,7 +316,8 @@ input{
 }
 
 .home__title{
-    font-family: var(--second-font);
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    /* font-family: var(--second-font); */
     font-size: var(--big-font-size);
     font-weight: var(--wight-900);
 }
@@ -450,6 +451,8 @@ input{
 }
 
 .portfolio__item{
+    width: 75%;
+    height: 75%;
     position: relative;
     cursor: pointer;
     border-radius: var(--radius);
@@ -477,7 +480,6 @@ input{
 }
 
 .portfolio__img{
-    width: 100%;
     opacity: 0.75;
     vertical-align: middle;
     transition: all 1s var(--transition);
