--- a/assest/CSS/style.css
+++ b/assest/CSS/style.css
@@ -242,13 +242,17 @@ input{
 }
 
 .nav__socials{
-    column-gap: 1.5rem;
+    column-gap: 1rem;
     margin-left: auto;
 }
 
 .nav__social-link:hover{
     color: var(--first-color);
-    transform: translateY(-0.25rem);
+    transition: all 0.8s ease;
+    -webkit-transform: scale(0.95);
+    transform: scale(0.95);
+    box-shadow: 1px 1px 54px 1px rgba(160, 160, 160, 0.22);
+    cursor: pointer;
 }
 
 .nav__link-btn{
