--- a/Assignment/JS/InMemory-POS/assest/css/styles.css
+++ b/Assignment/JS/InMemory-POS/assest/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: url("../img/home.jpeg");
+    background: url("../img/img1.jpeg");
     background-size: cover;
     background-position: right;
 }
